# ais_manager

./: Cargo.toml  Overrides.toml  build.rs
src/: config.rs  external.rs  internal.rs  main.rs  network.rs  portal.rs  signals.rs  status.rs
src/applications/: child.rs  function_for_systemd_running.rs  mod.rs  monitor.rs  pid.rs  resolve.rs  start_stop.rs
src/ebpf/: macros.h  network.c  prog.c  vmlinux.h
src/py/: auto.py  pid.py
src/system/: config.rs  control.rs  ebpf.rs  manager.rs  mod.rs  portal.rs  signals.rs  state.rs
