[package]
name = "ais_manager"
version = "1.0.0"
edition = "2021"

[dependencies]
#artisan_middleware = { path = "/home/dwhitfield/code/Artisan_Hosting/Libraries/artisan_middleware_lib" }
artisan_middleware = "4.2.0"
dusa_collection_utils = "3.1.1"
glob = "0.3.1"
serde = "1.0.215"
serde_json = "1.0.133"
signal-hook = "0.3.17"
simple_comms = "1.0.1"
tokio = "1.41.1"
