[package]
name = "ais_manager"
version = "2.0.1"
edition = "2021"

[dependencies]
#artisan_middleware = "5.3.1"
artisan_middleware = {path = "/root/artisan_lib"}
colored = "3.0.0"
gethostname = "1.0.0"
glob = "0.3.1"
hex = "0.4.3"
lazy_static = "1.5.0"
nix = { version = "0.29", features = ["process"] }
once_cell = "1.20.2"
serde = "1.0.215"
serde_json = "1.0.133"
signal-hook = "0.3.17"
simple_comms = "1.2.0"
tokio = "1.41.1"
