[package]
name = "ais_manager"
version = "2.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
#artisan_middleware = "5.3.1"
artisan_middleware = {path = "/root/artisan_lib"}
colored = "3.0.0"
gethostname = "1.0.0"
glob = "0.3.1"
hex = "0.4.3"
lazy_static = "1.5.0"
nix = { version = "0.29", features = ["process"] }
once_cell = "1.20.2"
serde = "1.0.215"
serde_json = "1.0.133"
signal-hook = "0.3.17"
simple_comms = "1.2.0"
tokio = "1.41.1"
procfs = "0.14"
aya = { version = "0.12", features = ["async_tokio"] }
#bytemuck = { version = "1.13.1", features = ["derive"] }
bytemuck = { version = "1.17", features = ["derive"] }

[build-dependencies]
cc = "1.0"
which = "4.4.0"